# u3v_webui

./: README.md  pyproject.toml  run.py
doc/: calibrate.md  calibration_guide.md  calibration_guide_zh.md  developer_guide.md  developer_guide_zh.md  guide.md  realsense_sr300_setup.md  realsense_sr300_setup_zh.md
u3v_webui/: __init__.py  app.py  config.py  security.py  state.py  streaming.py  utils.py
u3v_webui/drivers/: __init__.py  aravis_driver.py  base.py  rpi_driver.py  rpi_img_driver.py  sr300_driver.py  uvc_driver.py  virtual_driver.py
u3v_webui/plugins/: __init__.py  base.py
u3v_webui/plugins/anaglyph/: basic.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/bufrecord/: basic.py  defaults.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/cloudrecord/: __init__.py  cloudrecord.py  plugin.py  servo_client.py  ui.html  ui.js
u3v_webui/plugins/depthcolorize/: depthcolorize.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/lenscalibrate/: calibrate.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/lensundistort/: plugin.py  ui.html  ui.js  undistort.py
u3v_webui/plugins/motiondetect/: __init__.py  motion.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/multiview/: basic.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/overlaytext/: basic.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/params/: basic.py  defaults.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/photo/: basic.py  defaults.py  plugin.py  ui.html  ui.js
u3v_webui/plugins/record/: basic.py  defaults.py  plugin.py  (+2 more)
u3v_webui/templates/: index.html  login.html  redirect.html  viewer.html
(+20 files in other folders)
