[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "u3v-webui"
version = "6.10.0"
description = "Industrial Camera LAN WebUI — multi-camera, extensible"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "flask>=2.3",
    "flask-socketio>=5.3",
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
aravis = []          # Aravis is a system package: gir1.2-aravis-0.8
dev    = ["pytest", "ruff"]

[project.scripts]
u3v-webui = "u3v_webui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["u3v_webui*"]

[tool.ruff]
line-length = 100
target-version = "py39"
